# VaultMLN

./: .gitignore  LICENSE  README.md  index.html  main.py  package-lock.json  package.json  vite.config.js
Functions/: colorPicker.py  encrypt.py  fileManager.py  generatePass.py  kdf.py  manager.py  salt.py  themeManager.py
Installer/: index.html  package.json
Installer/assets/: installer_config.json
Installer/src/: main.jsx  styles.css
Installer/src-tauri/: Cargo.toml  tauri.conf.json
Installer/src-tauri/capabilities/: default.json
Installer/src-tauri/src/: lib.rs  main.rs
src/: main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: UI.py  add_password.py  checkSite.py  deletePassword.py  enterPassword.py  helpers.py  homepage.py  popups.py  settingsScreen.py  vaultSettings.py
