[package]
name = "vaultmln"
version = "2.0.0"
description = "VaultMLN password manager"
authors = ["WTRMLN"]
edition = "2021"

[lib]
name = "vaultmln_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
thiserror = "2"
