[package]
name = "vaultmln-installer"
version = "1.0.0"
description = "VaultMLN Installer"
authors = ["Melogne Studio"]
edition = "2021"

[lib]
name = "vaultmln_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
